[project]
name = "weibo-experiment-platform"
version = "0.2.0"
description = "微博AI评论互动实验平台 - 前端管理 + 定时调度系统"
requires-python = ">=3.11"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weibo_experiment_platform"]

[project.scripts]
dev = "weibo_experiment_platform.dev:main"
build = "weibo_experiment_platform.dev:build"
start = "weibo_experiment_platform.dev:start"
scheduler = "weibo_experiment_platform.scheduler:main"
checker = "weibo_experiment_platform.checker:main"
typecheck = "weibo_experiment_platform.dev:typecheck"
